# loafer

./: .gitignore  Cargo.toml  flake.nix  research.org  rust.org
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: basic-toml-0.1.9.crate
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/3/n/: nom
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/3/s/: syn
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/as/ka/: askama_derive  askama_parser
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/au/to/: autocfg
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/ba/si/: basic-toml
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/pr/oc/: proc-macro2
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/se/rd/: serde  serde_derive  serde_json
extras/mpv/scripts/: start.lua
src/: ipc.rs  lib.rs  main.rs
src/ipc/: api.rs
src/webserver/: api.rs  parser.rs
templates/: index.html
web/: index.html
