# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "loafer"
edition = "2021"

[lib]
name = "loafer_lib"
src = "src/lib.rs"
version = "0.1.0"

[[bin]]
name = "king" # sloth from sds
src = "src/bin/king/main.rs"

[dependencies]
serde_json = "1.0.114"
askama = "0.12.1"
